--- a/index.html
+++ b/index.html
@@ -1,25 +1,83 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Science Journal</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Science Journal</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Sacramento&display=swap" rel="stylesheet">
   <style>
     body {
-      background-color: #ffe4ec; /* pastel pink */
-      font-family: "Poppins", sans-serif;
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #ffe4ec, #ffd6f6);
+      color: #444;
       text-align: center;
-      padding: 50px;
     }
-    h1 {
+    header {
+      background-color: #ffb6d9;
+      padding: 40px 20px;
+      border-bottom: 4px solid #d63384;
+    }
+    header h1 {
+      font-family: 'Sacramento', cursive;
+      font-size: 60px;
+      margin: 0;
       color: #d63384;
     }
-    p {
-      font-size: 18px;
-      color: #444;
+    nav {
+      margin-top: 15px;
+    }
+    nav a {
+      text-decoration: none;
+      color: #fff;
+      background: #d63384;
+      padding: 8px 16px;
+      margin: 5px;
+      border-radius: 20px;
+      font-size: 14px;
+      transition: 0.3s;
+    }
+    nav a:hover {
+      background: #a61e68;
+    }
+    section {
+      padding: 60px 20px;
+    }
+    section h2 {
+      font-size: 28px;
+      color: #d63384;
+      margin-bottom: 15px;
+    }
+    footer {
+      background: #ffb6d9;
+      padding: 15px;
+      font-size: 14px;
+      color: #fff;
+      border-top: 4px solid #d63384;
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to My Science Journal 🧪💖</h1>
-  <p>where pastel pink meets nerdy experiments ✨</p>
+  <header>
+    <h1>My Science Journal 🧪💖</h1>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Experiments</a>
+      <a href="#">Notes</a>
+      <a href="#">About</a>
+    </nav>
+  </header>
+
+  <section>
+    <h2>welcome ✨</h2>
+    <p>
+      this is my pastel pink corner of science 🌸 <br>
+      where experiments meet aesthetics 🧪💡
+    </p>
+  </section>
+
+  <footer>
+    made with 💖 and curiosity ✨
+  </footer>
 </body>
 </html>
