--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
       background: linear-gradient(135deg, #ffe4ec, #ffd6f6);
       color: #444;
       text-align: center;
+      position: relative;
+      overflow-x: hidden;
     }
     header {
       background-color: #ffb6d9;
       padding: 40px 20px;
       border-bottom: 4px solid #d63384;
+      position: relative;
     }
     header h1 {
       font-family: 'Sacramento', cursive;
@@ -54,6 +57,26 @@
       font-size: 14px;
       color: #fff;
       border-top: 4px solid #d63384;
+      position: relative;
+    }
+    /* stickers */
+    .sticker {
+      position: absolute;
+      width: 80px;
+      opacity: 0.9;
+      z-index: 0;
+    }
+    .sticker.heart {
+      top: 20px;
+      left: 20px;
+    }
+    .sticker.bow {
+      bottom: 40px;
+      right: 20px;
+    }
+    .sticker.star {
+      top: 100px;
+      right: 50px;
     }
   </style>
 </head>
@@ -79,5 +102,10 @@
   <footer>
     made with 💖 and curiosity ✨
   </footer>
+
+  <!-- stickers -->
+  <img src="https://i.imgur.com/xw7pU5L.png" class="sticker heart" alt="pink heart sticker">
+  <img src="https://i.imgur.com/qWPL5tb.png" class="sticker bow" alt="pink bow sticker">
+  <img src="https://i.imgur.com/v1d3GJc.png" class="sticker star" alt="pink star sticker">
 </body>
 </html>
