--- a/index.html
+++ b/index.html
@@ -103,4 +103,6 @@
     made with 💖 and curiosity ✨
   </footer>
 
-
+<!-- stickers -->
+<img src="flower1.png" class="sticker heart" alt="flower sticker 1">
+<img src="flower2.png" class="sticker star" alt="flower sticker 2">
