--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   </footer>
 
   <!-- stickers -->
-  <img src="flower1.png" class="sticker heart" alt="flower sticker 1">
-  <img src="flower2.png" class="sticker star" alt="flower sticker 2">
+  <img src="flower1.png" ...>
+<img src="flower2.png" ...>
 </body>
 </html>
